--- a/src/components/common/trips/trips-toolbar/TripsToolbar.css
+++ b/src/components/common/trips/trips-toolbar/TripsToolbar.css
@@ -46,13 +46,14 @@
 }
 
 .trips-toolbar__checkbox-group {
-  display: flex;
-  flex-wrap: wrap;
-  align-items: center;
-  gap: 0.5rem 0.75rem;
-  width: fit-content;
-  max-width: 100%;
+	display: flex;
+	align-items: left;
+	gap: 0.5rem 0.75rem;
+	width: fit-content;
+	max-width: 100%;
+	flex-direction: column;
 }
+
 
 .trips-toolbar__checkbox-label {
   display: inline-flex;
